--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~11.2.14",
     "bootstrap": "^5.0.1",
     "ckeditor4-angular": "^2.2.1",
+    "highcharts": "^9.2.2",
+    "highcharts-angular": "^2.10.0",
     "moment": "^2.29.1",
     "ng-zorro-antd": "^11.4.2",
     "rxjs": "~6.5.5",
