--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build — prod"
+  },
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.14",
+    "@angular/cli": "~11.2.14",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
     "@angular/google-maps": "^12.2.8",
@@ -22,12 +29,15 @@
     "@angular/router": "~11.2.14",
     "bootstrap": "^5.0.1",
     "ckeditor4-angular": "^2.2.1",
+    "express": "^4.17.2",
     "highcharts": "^9.2.2",
     "highcharts-angular": "^2.10.0",
     "moment": "^2.29.1",
     "ng-zorro-antd": "^11.4.2",
+    "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.5",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
